Closed Bug 1253164 Opened 10 years ago Closed 7 years ago

Transform animation on a large frame can not run on compositor even after the target element size is reduced

Categories

(Core :: DOM: Animation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: hiro, Assigned: hiro)

Details

Attachments

(1 file)

var target = document.createElement('div'); target.style = 'width: 100px; height: 100px'; target.animate({ transform: [ 'translate(0px)', 'translate(100px)' ] }, 1000); - wait a frame - this animation is running on compositor target.style = 'width: 10000px; height: 10000px'; - wait a frame - this animation is not running on compositor now target.style = 'width: 100px; height: 100px'; - wait a frame - this animation does not get back on compositor
I did coincidentally notice that this can be easily fixed while I was looking at bug 1466954 and bug 779598. https://treeherder.mozilla.org/#/jobs?repo=try&revision=412a2286f2593c4d52a3641c7cf8b7f4d231bf05
Assignee: nobody → hikezoe
Status: NEW → ASSIGNED
Comment on attachment 8983692 [details] Bug 1253164 - Make nsIFrame allow running async animations once the frame is able able to run animations on the compositor again. https://reviewboard.mozilla.org/r/249512/#review256044 It seems almost too easy. I wonder why we didn't fix this before? Did something change? ::: commit-message-cea92:1 (Diff revision 1) > +Bug 1253164 - Make nsIFrame allow running async animations once the frame became the state to be able to run aninmations on the compositor. r?birtles s/aninmations/animations/ Make nsIFrame allow running async animations once the frame is able to run animations on the compositor again. ::: commit-message-cea92:3 (Diff revision 1) > +For example, we don't run transform animatons on large frame but once > +the frame size got smaller we should/can run transform animations on the frame. For example, we don't run transform animations on large frames but once the frame size is small enough we should run transform animations on the frame.
Attachment #8983692 - Flags: review?(bbirtles) → review+
(In reply to Brian Birtles (:birtles) from comment #3) > Comment on attachment 8983692 [details] > Bug 1253164 - Make nsIFrame allow running async animations once the frame > became the state to be able to run aninmations on the compositor. > > https://reviewboard.mozilla.org/r/249512/#review256044 > > It seems almost too easy. I wonder why we didn't fix this before? Did > something change? I think nothing hasn't been changed basically, but this commit https://hg.mozilla.org/integration/autoland/rev/b1c62ccec829 was pretty important for us, animation people, and I did notice it very recently. :) Thank you, Botond!
Pushed by hikezoe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/51f4eaa7c003 Make nsIFrame allow running async animations once the frame is able able to run animations on the compositor again. r=birtles
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: