Bug 1253164 - Make nsIFrame allow running async animations once the frame is able able to run animations on the compositor again.  r=birtles

For example, we don't run transform animations on large frames but once
the frame size is small enough we should run transform animations on the frame.

MozReview-Commit-ID: DkfB9g2Gcdi